<resources>
    <string name="app_name">ActivityWatch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ActivityWatch for Android</string>
    <string name="nav_header_subtitle">v0.1.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_buckets">BucketsActivity</string>
    <string name="welcome_title_text">Welcome, early user!</string>
    <string name="welcome_text">
        "Thanks for trying out ActivityWatch for Android!"
        "It\'s not quite as matured as ActivityWatch on other platforms, but it\'s a great step in the right direction and we think it's ready enough to put out there!"

        "\n\n<b>To get started</b>, open the drawer menu in the top left and click on "Activity".

        "\n\n<b>The next step for us</b> is to get cross-device synchronization in place, but it might take a while since we really want to get it right."

        "\n<b>If you\'re new to ActivityWatch</b>, you should also check out the <a href='https://activitywatch.net/'>desktop version of ActivityWatch</a>."
    </string>
    <string name="button_log_text">Click me to log data!</string>
    <string name="accessibility_service_description">Allows ActivityWatch to read the URL and title from your browser.</string>

    <!-- This is overridden by gradle config
    <string name="versionName">unknown version</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ===== 桌面小部件 ===== -->
    <string name="widget_screen_time_label">今日屏幕使用</string>
    <string name="widget_screen_time_desc">今日屏幕使用时长与最常用应用</string>
    <string name="widget_screen_time_no_permission">需要授权</string>
    <string name="widget_screen_time_grant_hint">点击打开应用，授予「使用情况访问」权限</string>
    <string name="widget_updated_at">更新于 %1$s</string>
    <string name="widget_calendar_title">%1$d年%2$d月</string>
    <!-- 2x2 紧凑档用短标题（去掉年份，省一行高度） -->
    <string name="widget_calendar_title_short">%1$d月</string>
    <string name="widget_calendar_desc">月历视图，高亮今天</string>
    <string name="widget_calendar_label">日历</string>
    <string name="widget_fragments_label">今日碎片</string>
    <string name="widget_fragments_desc">当天使用碎片热力与推断作息</string>
    <string name="widget_fragments_stats">起床 %1$s · 入睡 %2$s</string>
    <string name="widget_fragments_stats_stacked">起床 %1$s\n入睡 %2$s</string>
    <string name="widget_fragments_no_wake">没起</string>
    <string name="widget_fragments_no_sleep">没睡</string>
    <string name="widget_fragments_no_record">当天暂无使用记录</string>
    <string name="widget_fragments_grant_hint">需要授权「使用情况访问」，点按打开应用</string>
    <string name="widget_pin_screen_time_short">添加屏幕使用小部件</string>
    <string name="widget_pin_screen_time_long">把「今日屏幕使用」添加到桌面</string>
    <string name="widget_pin_calendar_short">添加日历小部件</string>
    <string name="widget_pin_calendar_long">把「日历」添加到桌面</string>
    <string name="widget_pin_fragments_short">添加碎片小部件</string>
    <string name="widget_pin_fragments_long">把「今日碎片」添加到桌面</string>
    <string name="widget_pin_confirm_hint">请在弹窗中确认，小部件就会添加到桌面</string>
    <string name="widget_pin_unsupported">当前桌面不支持一键添加，请长按桌面 →「小部件」→ ActivityWatch</string>
</resources>
